--- a/app/src/main/res/layout/activity_final__test.xml
+++ b/app/src/main/res/layout/activity_final__test.xml
@@ -1,5 +1,5 @@
 <android.support.v4.widget.DrawerLayout
-    android:id="@+id/drawer_layout"
+    android:id="@+id/drawer_layout_final"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -23,29 +23,29 @@
         </include>
 
         <fragment
-            android:id="@+id/map"
+            android:id="@+id/map_final"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             class="com.google.android.gms.maps.SupportMapFragment" />
 
         <Button
-            android:id="@+id/bNavigation"
+            android:id="@+id/bNavigation_final"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:text="Navigate" />
 
         <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"-->
-                  <!--android:id="@+id/map"-->
-                  <!--android:layout_width="match_parent"-->
-                  <!--android:layout_height="match_parent"-->
-                  <!--class="com.google.android.gms.maps.SupportMapFragment"/>-->
+        <!--android:id="@+id/map"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--class="com.google.android.gms.maps.SupportMapFragment"/>-->
 
     </LinearLayout>
 
 
     <fragment
-        android:id="@+id/drawer_fragment"
+        android:id="@+id/drawer_fragment_final"
         android:name="com.example.razon30.projectmap.NavigationDrawerFragment"
         android:layout_width="240dp"
         android:layout_height="match_parent"
