--- a/app/src/main/res/menu/menu_simple_direction.xml
+++ b/app/src/main/res/menu/menu_simple_direction.xml
@@ -1,15 +1,9 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:app="http://schemas.android.com/apk/res-auto"
       xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
+      tools:context="com.example.razon30.projectmap.SimpleDirection">
     <item android:id="@+id/action_settings"
           android:title="@string/action_settings"
           android:orderInCategory="100"
           app:showAsAction="never"/>
-
-      <item android:id="@+id/final_test_activity"
-            android:title="Final Test Activity"
-            android:orderInCategory="100"
-            app:showAsAction="never"/>
-
 </menu>
